# TensorCompiler

./: CMakeLists.txt  README.md
examples/: add_model.onnx  complex_model.onnx  conv_layer.onnx  linear_model.onnx  test_attributes.onnx
graphviz/: graph.dot
include/: Edge.hpp  Graph.hpp  Node.hpp  Tensor.hpp  Types.hpp
onnx/: onnx.proto
onnx_gen/: onnx_gen.py
src/: Graph.cpp  Node.cpp  Tensor.cpp  main.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: test_graph.cpp  test_node.cpp  test_tensor.cpp
